<resources>
    <string name="app_name">D-day</string>
    <string name="hint">tip : Click on the widget will be refreshed manually.</string>
    <string name="select">Please select the D-Day.</string>







    <string name="dialTitle">Notice</string>
    <string name="confirm">back</string>
    <string name="content1">This is a simple app calculates and shows the D-Day widget. \n You can add a schedule to the Add button. \nYou can easily add a schedule by Add button.\nThe widget will be updated(usually automatically updated) when click.\n(The widget may not be working, depending on the model and Android version)\n(I\'m Korean, and not good at English so have help by google translate\n :) thank you for use!)</string>
    <string name="update1">☞ d-day calculate.\n☞ can use 4x1 widget</string>
    <string name="update2">☞Change title color(white)\n☞Improve selecting year </string>
    <string name="update3">☞Translucent widget added.</string>
    <string name="update4">☞Add the default screen automatically assigned a certain date to the current date.</string>








    <string name="background">Select background</string>

    <string name="hello1">Hello!</string>
    <string name="how">Please add the calendar \n   using the button!</string>
    <string name="delete">You can swipe to delete calendar.</string>


    <string name="swipe">Swipe to delete</string>

    <string name="title">Please enter your details.</string>
    <string name="insert">ADD</string>
    <string name="null1">Please enter the title.</string>
    <string name="null2">Please enter the year.</string>
    <string name="null3">Please enter the month.</string>
    <string name="null4">Please enter the date.</string>




    <string-array name="year">
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
        <item>2041</item>





    </string-array>


    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>

    </string-array>
    <string-array name="date">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>


    </string-array>
    <string name="hint3">Please enter the subject.</string>
    <string name="update5">☞Add 4x4 widget. \n☞fix update interval 3 hours.</string>

</resources>
