<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="390dp"
    android:background="#ffffffff">


    <LinearLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/dialTitle"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:text="@string/content1"
            android:textSize="15sp" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
           >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="[ver 1.16]"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/update5"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="[ver 1.15]"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/update4"
                    android:textSize="15sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="[ver 1.04]"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/update3"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="[ver 1.02]"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/update2"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="[ver 1.0]"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/update1"
                    android:textSize="15sp" />



            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>